--- a/vignettes/propensity_scores.Rmd
+++ b/vignettes/propensity_scores.Rmd
@@ -123,11 +123,13 @@ analysis_att <- create_analysis_obj(
   data_matrix = example_matrix_att,
   outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000), weight_var = "att"),
   borrowing = borrowing_details("Full borrowing", "ext"),
-  treatment = treatment_details("trt", normal_prior(0, 10000))
+  treatment = treatment_details("trt", normal_prior(0, 10000)),
+  quiet = TRUE
 )
 
 result_att <- mcmc_sample(analysis_att, seed = 123)
 ```
+
 
 
 ## Matching with `MatchIt`
@@ -232,6 +234,7 @@ summary(match_11)
 
 
 ```r
+set.seed(123)
 plot(match_11, type = "jitter", interactive = FALSE)
 ```
 
@@ -264,13 +267,12 @@ analysis_match <- create_analysis_obj(
   data_matrix = example_matrix_match,
   outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
   borrowing = borrowing_details("Full borrowing", "ext"),
-  treatment = treatment_details("trt", normal_prior(0, 10000))
+  treatment = treatment_details("trt", normal_prior(0, 10000)),
+  quiet = TRUE
 )
 
 result_match <- mcmc_sample(analysis_match, seed = 123)
 ```
-
-
 ## Combined Weighting and Dynamic Borrowing
 
 The models also support fixed weights on the likelihood contributions from each observation. This
@@ -278,27 +280,22 @@ is equivalent to fixed power prior weights. This allows for the combination of m
 IPTW + commensurate prior approach.
 
 
-
-
-
 ```r
 analysis_iptw_bdb <- create_analysis_obj(
   data_matrix = example_matrix_att,
   outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000), weight_var = "att"),
   borrowing = borrowing_details("BDB", "ext", gamma_prior(0.01, 0.01)),
-  treatment = treatment_details("trt", normal_prior(0, 10000))
+  treatment = treatment_details("trt", normal_prior(0, 10000)),
+  quiet = TRUE
 )
 
 result_iptw_bdb <- mcmc_sample(analysis_iptw_bdb, seed = 123)
 ```
 
-
 ## Fixed Weights
 
 We can also use weights to specify a fixed power prior model. Here we set the power parameter $\alpha = 0.1$
 for the external controls.
-
-
 
 
 ```r
@@ -308,19 +305,16 @@ analysis_pp01 <- create_analysis_obj(
   data_matrix = example_matrix_pp01,
   outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000), weight_var = "pp_alpha"),
   borrowing = borrowing_details("Full borrowing", "ext"),
-  treatment = treatment_details("trt", normal_prior(0, 10000))
+  treatment = treatment_details("trt", normal_prior(0, 10000)),
+  quiet = TRUE
 )
 
 result_pp01 <- mcmc_sample(analysis_pp01, seed = 123)
 ```
 
-
-
 ## Reference Models
 
 For comparison, we also fit a full borrowing, a no borrowing, and a BDB model without weights.
-
-
 
 
 ```r
@@ -329,7 +323,8 @@ result_full <- mcmc_sample(
     data_matrix = example_matrix,
     outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
     borrowing = borrowing_details("Full borrowing", "ext"),
-    treatment = treatment_details("trt", normal_prior(0, 10000))
+    treatment = treatment_details("trt", normal_prior(0, 10000)),
+    quiet = TRUE
   ),
   seed = 123
 )
@@ -339,7 +334,8 @@ result_none <- mcmc_sample(
     data_matrix = example_matrix,
     outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
     borrowing = borrowing_details("No borrowing", "ext"),
-    treatment = treatment_details("trt", normal_prior(0, 10000))
+    treatment = treatment_details("trt", normal_prior(0, 10000)),
+    quiet = TRUE
   ),
   seed = 123
 )
@@ -349,11 +345,13 @@ result_bdb <- mcmc_sample(
     data_matrix = example_matrix_att,
     outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
     borrowing = borrowing_details("BDB", "ext", gamma_prior(0.01, 0.01)),
-    treatment = treatment_details("trt", normal_prior(0, 10000))
+    treatment = treatment_details("trt", normal_prior(0, 10000)),
+    quiet = TRUE
   ),
   seed = 123
 )
 ```
+
 
 
 # Comparison of Results
