--- a/vignettes/dataset.Rmd
+++ b/vignettes/dataset.Rmd
@@ -295,9 +295,12 @@ anls_obj <- create_analysis_obj(
   data_matrix = example_matrix,
   outcome = outcome,
   borrowing = borrowing,
-  treatment = treatment
-)
+  treatment = treatment,
+  quiet = TRUE
+  )
 ```
+
+
 
 
 
@@ -322,8 +325,10 @@ results <- mcmc_sample(anls_obj,
   iter_sampling = 50000,
   chains = 4,
   seed = 112233
-)
+  )
 ```
+
+
 
 # Summarizing results{.tabset}
 
