--- a/vignettes/weighting.Rmd
+++ b/vignettes/weighting.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "7. Comparison of Fixed Weights"
+title: "6. Comparison of Fixed Weights"
 author: "Matt Secrest and Isaac Gravestock"
 output:
   rmarkdown::html_vignette:
@@ -66,9 +66,6 @@ logistic_glm_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
 ### BayesPPD
 
 
-
-
-
 ```r
 logistic_ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   logistic_ppd <- glm.fixed.a0(
@@ -103,8 +100,6 @@ logistic_ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
 
 
 
-
-
 ```r
 logistic_psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   logistic_psb2 <- create_analysis_obj(
@@ -122,7 +117,8 @@ logistic_psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
     outcome = outcome_bin_logistic("resp",
       baseline_prior = normal_prior(0, 1000),
       weight_var = "w"
-    )
+    ),
+    quiet = TRUE
   )
 
   mcmc_logistic_psb2 <- mcmc_sample(logistic_psb2, chains = 1, verbose = FALSE, seed = 123)
@@ -142,6 +138,8 @@ logistic_psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   )
 })
 ```
+
+
 
 ### Results
 
@@ -171,26 +169,26 @@ knitr::kable(wide[new_order, ], digits = 3, row.names = FALSE)
 
 | borrowing|variable    |est_ci.glm              |est_ci.BayesPPD         |est_ci.psborrow2        |
 |---------:|:-----------|:-----------------------|:-----------------------|:-----------------------|
-|      0.00|(Intercept) |0.646 (-0.038, 1.357)   |0.664 (-0.043, 1.384)   |0.666 (-0.044, 1.384)   |
-|      0.25|(Intercept) |0.394 (-0.131, 0.931)   |0.398 (-0.160, 0.932)   |0.404 (-0.129, 0.950)   |
-|      0.50|(Intercept) |0.293 (-0.158, 0.751)   |0.302 (-0.160, 0.771)   |0.301 (-0.147, 0.746)   |
-|      0.75|(Intercept) |0.235 (-0.168, 0.642)   |0.247 (-0.159, 0.651)   |0.239 (-0.165, 0.643)   |
-|      1.00|(Intercept) |0.196 (-0.172, 0.567)   |0.200 (-0.181, 0.579)   |0.200 (-0.165, 0.570)   |
-|      0.00|cov1        |-0.771 (-1.465, -0.095) |-0.799 (-1.514, -0.101) |-0.794 (-1.474, -0.111) |
-|      0.25|cov1        |-0.781 (-1.340, -0.231) |-0.790 (-1.344, -0.227) |-0.795 (-1.356, -0.246) |
-|      0.50|cov1        |-0.769 (-1.252, -0.291) |-0.786 (-1.283, -0.290) |-0.782 (-1.270, -0.310) |
-|      0.75|cov1        |-0.758 (-1.191, -0.329) |-0.769 (-1.206, -0.334) |-0.769 (-1.201, -0.328) |
-|      1.00|cov1        |-0.749 (-1.145, -0.357) |-0.753 (-1.155, -0.356) |-0.757 (-1.147, -0.366) |
-|      0.00|cov2        |-0.730 (-1.472, -0.008) |-0.757 (-1.517, -0.026) |-0.751 (-1.491, -0.021) |
-|      0.25|cov2        |-0.559 (-1.114, -0.014) |-0.571 (-1.112, -0.023) |-0.567 (-1.126, -0.024) |
-|      0.50|cov2        |-0.459 (-0.926, 0.003)  |-0.461 (-0.921, 0.003)  |-0.464 (-0.930, -0.006) |
-|      0.75|cov2        |-0.398 (-0.811, 0.011)  |-0.410 (-0.825, -0.001) |-0.403 (-0.816, 0.011)  |
-|      1.00|cov2        |-0.358 (-0.731, 0.013)  |-0.366 (-0.748, 0.009)  |-0.359 (-0.731, 0.006)  |
-|      0.00|trt         |0.154 (-0.558, 0.871)   |0.166 (-0.558, 0.877)   |0.155 (-0.574, 0.885)   |
-|      0.25|trt         |0.349 (-0.183, 0.885)   |0.356 (-0.181, 0.886)   |0.353 (-0.197, 0.887)   |
-|      0.50|trt         |0.405 (-0.082, 0.894)   |0.409 (-0.078, 0.890)   |0.410 (-0.079, 0.889)   |
-|      0.75|trt         |0.434 (-0.031, 0.900)   |0.436 (-0.037, 0.898)   |0.440 (-0.028, 0.911)   |
-|      1.00|trt         |0.452 (-0.000, 0.905)   |0.456 (0.010, 0.907)    |0.456 (-0.000, 0.909)   |
+|      0.00|(Intercept) |0.646 (-0.038, 1.357)   |0.659 (-0.040, 1.384)   |0.666 (-0.044, 1.384)   |
+|      0.25|(Intercept) |0.394 (-0.131, 0.931)   |0.406 (-0.122, 0.941)   |0.404 (-0.129, 0.950)   |
+|      0.50|(Intercept) |0.293 (-0.158, 0.751)   |0.301 (-0.159, 0.754)   |0.301 (-0.147, 0.746)   |
+|      0.75|(Intercept) |0.235 (-0.168, 0.642)   |0.234 (-0.163, 0.637)   |0.239 (-0.165, 0.643)   |
+|      1.00|(Intercept) |0.196 (-0.172, 0.567)   |0.192 (-0.166, 0.560)   |0.200 (-0.165, 0.570)   |
+|      0.00|cov1        |-0.771 (-1.465, -0.095) |-0.783 (-1.489, -0.100) |-0.794 (-1.474, -0.111) |
+|      0.25|cov1        |-0.781 (-1.340, -0.231) |-0.799 (-1.362, -0.246) |-0.795 (-1.356, -0.246) |
+|      0.50|cov1        |-0.769 (-1.252, -0.291) |-0.784 (-1.276, -0.307) |-0.782 (-1.270, -0.310) |
+|      0.75|cov1        |-0.758 (-1.191, -0.329) |-0.761 (-1.197, -0.338) |-0.769 (-1.201, -0.328) |
+|      1.00|cov1        |-0.749 (-1.145, -0.357) |-0.749 (-1.146, -0.360) |-0.757 (-1.147, -0.366) |
+|      0.00|cov2        |-0.730 (-1.472, -0.008) |-0.754 (-1.506, -0.016) |-0.751 (-1.491, -0.021) |
+|      0.25|cov2        |-0.559 (-1.114, -0.014) |-0.570 (-1.120, -0.016) |-0.567 (-1.126, -0.024) |
+|      0.50|cov2        |-0.459 (-0.926, 0.003)  |-0.463 (-0.941, 0.008)  |-0.464 (-0.930, -0.006) |
+|      0.75|cov2        |-0.398 (-0.811, 0.011)  |-0.401 (-0.813, 0.008)  |-0.403 (-0.816, 0.011)  |
+|      1.00|cov2        |-0.358 (-0.731, 0.013)  |-0.359 (-0.725, 0.011)  |-0.359 (-0.731, 0.006)  |
+|      0.00|trt         |0.154 (-0.558, 0.871)   |0.156 (-0.561, 0.886)   |0.155 (-0.574, 0.885)   |
+|      0.25|trt         |0.349 (-0.183, 0.885)   |0.352 (-0.188, 0.880)   |0.353 (-0.197, 0.887)   |
+|      0.50|trt         |0.405 (-0.082, 0.894)   |0.408 (-0.077, 0.886)   |0.410 (-0.079, 0.889)   |
+|      0.75|trt         |0.434 (-0.031, 0.900)   |0.440 (-0.025, 0.902)   |0.440 (-0.028, 0.911)   |
+|      1.00|trt         |0.452 (-0.000, 0.905)   |0.456 (0.010, 0.916)    |0.456 (-0.000, 0.909)   |
 
 
 
@@ -220,6 +218,7 @@ The model has a treatment indicator and two covariates, `eventtime ~ trt + cov1 
 
 
 ```r
+set.seed(123)
 sim_data_exp <- cbind(
   simsurv::simsurv(
     dist = "exponential",
@@ -234,13 +233,13 @@ sim_data_exp <- cbind(
 
 ```r
 head(sim_data_exp)
-#   id   eventtime status trt cov1 cov2 ext censor
-# 1  1 0.073305622      1   0    0    1   0      0
-# 2  2 0.082448545      1   0    1    0   0      0
-# 3  3 0.065267084      1   0    1    0   0      0
-# 4  4 0.005114499      1   0    1    0   0      0
-# 5  5 0.419958128      1   0    0    0   0      0
-# 6  6 0.009949567      1   0    1    0   0      0
+#   id  eventtime status trt cov1 cov2 ext censor
+# 1  1 0.14802638      1   0    0    1   0      0
+# 2  2 0.05065174      1   0    1    0   0      0
+# 3  3 0.01727805      1   0    1    0   0      0
+# 4  4 0.13168620      1   0    1    0   0      0
+# 5  5 0.07740706      1   0    0    0   0      0
+# 6  6 0.04999778      1   0    1    0   0      0
 ```
 
 
@@ -269,8 +268,6 @@ glm_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   )
 })
 ```
-
-
 
 
 ```r
@@ -307,8 +304,6 @@ ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
 
 
 
-
-
 ```r
 ## psborrow2
 psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
@@ -324,7 +319,8 @@ psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
     outcome = outcome_surv_exponential("eventtime", "censor",
       baseline_prior = normal_prior(0, 1000),
       weight_var = "w"
-    )
+    ),
+    quiet = TRUE
   )
 
   mcmc_exp_psb2 <- mcmc_sample(exp_psb2, chains = 1, verbose = FALSE, seed = 123)
@@ -344,7 +340,11 @@ psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   )
 })
 ```
+  
 
+```r
+knitr::knit_hooks$set(output = output_hook)
+```
 
 ### Results
 
@@ -371,28 +371,28 @@ knitr::kable(wide[new_order, ], digits = 3, row.names = FALSE)
 
 
 
-| borrowing|variable    |est_ci.glm            |est_ci.BayesPPD       |est_ci.psborrow2      |
-|---------:|:-----------|:---------------------|:---------------------|:---------------------|
-|      0.00|(Intercept) |1.514 (1.181, 1.847)  |1.497 (1.158, 1.829)  |1.496 (1.142, 1.825)  |
-|      0.25|(Intercept) |1.358 (1.101, 1.616)  |1.350 (1.082, 1.615)  |1.346 (1.073, 1.606)  |
-|      0.50|(Intercept) |1.338 (1.115, 1.560)  |1.328 (1.095, 1.556)  |1.331 (1.101, 1.553)  |
-|      0.75|(Intercept) |1.331 (1.132, 1.530)  |1.325 (1.125, 1.521)  |1.328 (1.115, 1.526)  |
-|      1.00|(Intercept) |1.328 (1.147, 1.510)  |1.323 (1.137, 1.505)  |1.322 (1.133, 1.508)  |
-|      0.00|cov1        |1.228 (0.899, 1.558)  |1.227 (0.898, 1.548)  |1.231 (0.916, 1.559)  |
-|      0.25|cov1        |1.096 (0.827, 1.365)  |1.101 (0.832, 1.371)  |1.100 (0.834, 1.375)  |
-|      0.50|cov1        |1.055 (0.821, 1.289)  |1.062 (0.828, 1.304)  |1.057 (0.821, 1.292)  |
-|      0.75|cov1        |1.033 (0.823, 1.243)  |1.034 (0.827, 1.241)  |1.033 (0.828, 1.248)  |
-|      1.00|cov1        |1.018 (0.826, 1.211)  |1.022 (0.834, 1.217)  |1.023 (0.828, 1.220)  |
-|      0.00|cov2        |0.088 (-0.264, 0.440) |0.084 (-0.267, 0.424) |0.080 (-0.277, 0.432) |
-|      0.25|cov2        |0.025 (-0.239, 0.289) |0.021 (-0.244, 0.288) |0.025 (-0.241, 0.281) |
-|      0.50|cov2        |0.034 (-0.188, 0.257) |0.031 (-0.192, 0.250) |0.034 (-0.189, 0.262) |
-|      0.75|cov2        |0.042 (-0.154, 0.239) |0.044 (-0.147, 0.241) |0.042 (-0.153, 0.232) |
-|      1.00|cov2        |0.048 (-0.130, 0.226) |0.047 (-0.129, 0.223) |0.048 (-0.134, 0.226) |
-|      0.00|trt         |1.258 (0.912, 1.603)  |1.266 (0.931, 1.616)  |1.265 (0.923, 1.623)  |
-|      0.25|trt         |1.517 (1.259, 1.775)  |1.516 (1.254, 1.773)  |1.519 (1.257, 1.783)  |
-|      0.50|trt         |1.558 (1.322, 1.794)  |1.559 (1.317, 1.794)  |1.556 (1.321, 1.793)  |
-|      0.75|trt         |1.575 (1.348, 1.801)  |1.572 (1.342, 1.798)  |1.571 (1.333, 1.797)  |
-|      1.00|trt         |1.584 (1.363, 1.804)  |1.581 (1.356, 1.798)  |1.583 (1.352, 1.801)  |
+| borrowing|variable    |est_ci.glm             |est_ci.BayesPPD        |est_ci.psborrow2       |
+|---------:|:-----------|:----------------------|:----------------------|:----------------------|
+|      0.00|(Intercept) |1.930 (1.597, 2.263)   |1.913 (1.573, 2.225)   |1.916 (1.586, 2.235)   |
+|      0.25|(Intercept) |1.581 (1.323, 1.838)   |1.576 (1.313, 1.837)   |1.574 (1.318, 1.819)   |
+|      0.50|(Intercept) |1.473 (1.251, 1.695)   |1.472 (1.245, 1.686)   |1.466 (1.237, 1.679)   |
+|      0.75|(Intercept) |1.414 (1.215, 1.613)   |1.409 (1.211, 1.603)   |1.409 (1.207, 1.602)   |
+|      1.00|(Intercept) |1.376 (1.194, 1.558)   |1.375 (1.191, 1.552)   |1.373 (1.189, 1.550)   |
+|      0.00|cov1        |0.630 (0.300, 0.959)   |0.631 (0.304, 0.967)   |0.634 (0.315, 0.959)   |
+|      0.25|cov1        |0.722 (0.453, 0.991)   |0.722 (0.445, 0.997)   |0.725 (0.461, 0.991)   |
+|      0.50|cov1        |0.786 (0.552, 1.020)   |0.781 (0.549, 1.021)   |0.789 (0.557, 1.031)   |
+|      0.75|cov1        |0.827 (0.616, 1.037)   |0.827 (0.622, 1.034)   |0.827 (0.618, 1.037)   |
+|      1.00|cov1        |0.854 (0.662, 1.046)   |0.853 (0.659, 1.046)   |0.855 (0.666, 1.051)   |
+|      0.00|cov2        |0.043 (-0.309, 0.395)  |0.041 (-0.316, 0.382)  |0.037 (-0.321, 0.377)  |
+|      0.25|cov2        |-0.009 (-0.273, 0.255) |-0.013 (-0.283, 0.249) |-0.011 (-0.274, 0.256) |
+|      0.50|cov2        |0.009 (-0.213, 0.232)  |0.008 (-0.220, 0.226)  |0.008 (-0.212, 0.233)  |
+|      0.75|cov2        |0.023 (-0.173, 0.220)  |0.025 (-0.173, 0.219)  |0.025 (-0.170, 0.221)  |
+|      1.00|cov2        |0.033 (-0.144, 0.211)  |0.033 (-0.145, 0.212)  |0.033 (-0.145, 0.211)  |
+|      0.00|trt         |1.256 (0.911, 1.601)   |1.261 (0.920, 1.615)   |1.256 (0.904, 1.605)   |
+|      0.25|trt         |1.564 (1.306, 1.822)   |1.562 (1.305, 1.807)   |1.561 (1.303, 1.814)   |
+|      0.50|trt         |1.622 (1.386, 1.859)   |1.620 (1.378, 1.857)   |1.619 (1.378, 1.856)   |
+|      0.75|trt         |1.649 (1.422, 1.875)   |1.646 (1.416, 1.866)   |1.646 (1.420, 1.867)   |
+|      1.00|trt         |1.664 (1.443, 1.884)   |1.658 (1.439, 1.877)   |1.658 (1.436, 1.876)   |
 
 
 
